--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index",
-    "db:create": "cd db && npx sequelize-cli db:create",
-    "db:migrate": "cd db && npx sequelize-cli db:migrate",
-    "db:seed": "cd db && npx sequelize-cli db:seed:all"
+    "dev": "ts-node-dev --respawn --transpile-only index",
+    "db:create": "npx sequelize-cli db:create",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:seed": "npx sequelize-cli db:seed:all",
+    "db:seed_undo": "npx sequelize-cli db:seed:undo:all",
+    "db:drop": "npx sequelize-cli db:drop",
+    "lint": "eslint . --ext .ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.4",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -23,6 +32,13 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "@types/node": "^16.7.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.2.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.5"
   }
 }
