--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "servertodolist",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index",
-    "dev": "ts-node-dev --respawn --transpile-only index",
+    "start": "NODE_ENV=production ts-node ./index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only ./index",
+    "prod": "NODE_ENV=production ts-node ./index.ts",
     "db:create": "npx sequelize-cli db:create",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:seed": "npx sequelize-cli db:seed:all",
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@types/express": "^4.17.13",
+    "@types/node": "^16.7.1",
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
@@ -29,16 +30,16 @@
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.13",
     "pg": "^8.4.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/node": "^16.7.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
     "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
+    "ts-node-dev": "^1.1.8"
   }
 }
