--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "nodemailer": "^6.4.13",
     "pg": "^8.4.0",
     "sequelize": "^6.3.5",
+    "sharp": "^0.29.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
