--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,17 +3,17 @@ version: '3.7'
 
 services:
   nginx-proxy:
-    image: 'jc21/nginx-proxy-manager:latest'
+    image: 'nginx:latest'
     restart: unless-stopped
     ports:
       - '80:80'
-      - '81:81'
+      #      - '81:81'
       - '443:443'
-    volumes:
-      - ./data:/data
-      - ./letsencrypt:/etc/letsencrypt
+  #    volumes:
+  #      - ./data:/data
+  #      - ./letsencrypt:/etc/letsencrypt
 
-  db:
+  postgres_db:
     image: postgres:12
     ports:
       - '5433:5432'
@@ -21,3 +21,16 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
+  backend:
+    build: ./backend
+    network_mode: "host"
+    environment:
+      - NODE_ENV=development
+      - DB_CONFIG_HOST=postgres_db
+      - DB_CONFIG_USERNAME=postgres
+      - DB_CONFIG_PASSWORD=postgres
+      - DB_CONFIG_DATABASE=mini_trello
+      - DB_CONFIG_PORT=5432
+    ports:
+      - '3004:3004'
