--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,14 +23,14 @@ services:
       - POSTGRES_PASSWORD=postgres
 
   backend:
-    build: ./backend
+    build: ./backend/
     network_mode: "host"
     environment:
-      - NODE_ENV=development
-      - DB_CONFIG_HOST=postgres_db
-      - DB_CONFIG_USERNAME=postgres
-      - DB_CONFIG_PASSWORD=postgres
-      - DB_CONFIG_DATABASE=mini_trello
-      - DB_CONFIG_PORT=5432
+      NODE_ENV: "development"
+      DB_CONFIG_HOST: "localhost"
+      DB_CONFIG_USERNAME: "postgres"
+      DB_CONFIG_PASSWORD: "postgres"
+      DB_CONFIG_DATABASE: "postgres"
+      DB_CONFIG_PORT: "5433"
     ports:
       - '3004:3004'
