--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,8 @@ services:
       - '80:80'
       #      - '81:81'
       - '443:443'
-  #    volumes:
+    volumes:
+      - ./nginx/config:/etc/nginx/conf.d
   #      - ./data:/data
   #      - ./letsencrypt:/etc/letsencrypt
 
@@ -18,9 +19,22 @@ services:
     ports:
       - '5433:5432'
     environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_DB: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+
+  frontend:
+    container_name: frontend
+    build: ./frontend
+    volumes:
+      - './:/app'
+      - '/app/node_modules'
+    ports:
+      - 3000:3000
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    command: npm start
 
   backend:
     build: ./backend/
@@ -32,5 +46,14 @@ services:
       DB_CONFIG_PASSWORD: "postgres"
       DB_CONFIG_DATABASE: "postgres"
       DB_CONFIG_PORT: "5433"
+      EMAIL: "felldektest@yandex.by"
+      EMAIL_PASSWORD: "superSecretPassword#"
+      OPEN_WEATHER_MAP_KEY: "09c9100efc9d8293dc475e96d7fbeed7"
+      RECOVERY_PASSWORD_TOKEN_LIFE: "1800s"
+      RECOVERY_PASSWORD_TOKEN_SECRET: "a23764d8447acfda33c5234f186417acc0591473a7c2a4ed5448b818242ad87622826d91f"
+      REFRESH_TOKEN_LIFE: "5184000s"
+      REFRESH_TOKEN_SECRET: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjU2ZTNjN2YxLTU5MzAtNDM4NC05MmY5LTRmNjRjMjQwOWFlYyIsImlhdCI6MTYwMjI3MTY1MCwiZXhwIjoxNjAyMjcxNjU1fQ.xo9rogfvc9NgTgDy2Gcm56Ox5c5S8zrJVGvqK4umv2A"
+      TOKEN_LIFE: "1800s"
+      TOKEN_SECRET: "601af7d42208e2626fad09c3cc72cd07ed9faf7947491e5378fc22b747aea1c1b63b50f6678c2f3d3c36e454aa2940e110213de32e33c53a7563b09a7ddf1de2"
     ports:
       - '3004:3004'
