--- a/nginx/config/custom.conf
+++ b/nginx/config/custom.conf
@@ -1,31 +1,17 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
-
-    #access_log  /var/log/nginx/host.access.log  main;
-
-    location /backend/ {
-      proxy_pass http://192.168.100.33:3004/;
-    }
-
-    location /app/ {
-      root   /usr/share/nginx/html;
-      proxy_pass http://192.168.100.33:3000/;
-    }
+    listen 80;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-;         try_files $uri $uri/ /index.html =404;
+        proxy_pass http://192.168.100.33:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    location /api/ {
+        proxy_pass http://192.168.100.33:3004/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
