--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,11 @@ version: '3.7'
 services:
   frontend:
     build: ./frontend
-    image: "frontend:1.0.1"
+    image: "mini_trello_frontend:1.0.0"
 
   proxy:
     build: ./nginx-proxy
-    image: "proxy:1.0.0"
+    image: "mini_trello_proxy:1.0.0"
     ports:
       - "80:80"
 
@@ -25,7 +25,7 @@ services:
 
   backend:
     build: ./backend/
-    image: "backend:1.0.0"
+    image: "mini_trello_backend:1.0.0"
     environment:
       NODE_ENV: "development"
       DB_CONFIG_HOST: "postgres_db"
