--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -33,6 +33,7 @@ services:
       DB_CONFIG_PASSWORD: "postgres"
       DB_CONFIG_DATABASE: "postgres"
       DB_CONFIG_PORT: "5432"
+      HOST: "http://34.118.105.207/api/"
       EMAIL: "felldektest@yandex.by"
       EMAIL_PASSWORD: "zofosgmaubumnxhc"
       OPEN_WEATHER_MAP_KEY: "09c9100efc9d8293dc475e96d7fbeed7"
