Dockerfile update envs

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,6 +15,15 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 COPY . /app
 
+ARG REACT_APP_API
+ARG REACT_APP_TEST
+
+ENV REACT_APP_API $REACT_APP_API
+ENV REACT_APP_TEST $REACT_APP_TEST
+
+ARG APP_API_URL
+ARG APP_ENV
+
 RUN npm run build
 
 FROM nginx:1.21.0-alpine
