--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     ports:
       - '5433:5432'
     environment:
-      POSTGRES_DB: "postgres"
+      POSTGRES_DB: "mini-trello"
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
     volumes:
@@ -31,7 +31,7 @@ services:
       DB_CONFIG_HOST: "postgres_db"
       DB_CONFIG_USERNAME: "postgres"
       DB_CONFIG_PASSWORD: "postgres"
-      DB_CONFIG_DATABASE: "postgres"
+      DB_CONFIG_DATABASE: "mini-trello"
       DB_CONFIG_PORT: "5432"
       EMAIL: "felldektest@yandex.by"
       EMAIL_PASSWORD: "zofosgmaubumnxhc"
