--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "servertodolist",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -12,7 +13,8 @@
     "db:seed": "npx sequelize-cli db:seed:all",
     "db:seed_undo": "npx sequelize-cli db:seed:undo:all",
     "db:drop": "npx sequelize-cli db:drop",
-    "lint": "node_modules/.bin/eslint . --ext .ts"
+    "lint": "node_modules/.bin/eslint index.ts",
+    "lint_fix": "node_modules/.bin/eslint . --fix"
   },
   "author": "",
   "license": "ISC",
@@ -33,15 +35,20 @@
     "pg": "^8.4.0",
     "sequelize": "^6.3.5",
     "sharp": "^0.29.0",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
+    "typescript": "5.5.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
     "nodemon": "^2.0.12",
     "sequelize-cli": "^6.6.2",
-    "ts-node-dev": "^1.1.8"
+    "@stylistic/eslint-plugin-ts": "2.9.0",
+    "@typescript-eslint/eslint-plugin": "8.8.1",
+    "@typescript-eslint/parser": "8.8.1",
+    "@typescript-eslint/type-utils": "8.8.1",
+    "@typescript-eslint/utils": "8.8.1",
+    "eslint": "9.12.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jest": "28.8.3",
+    "eslint-plugin-rulesdir": "0.2.2",
+    "ts-api-utils": "1.3.0"
   }
 }
