--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "db:seed_undo": "npx sequelize-cli db:seed:undo:all",
     "db:drop": "npx sequelize-cli db:drop",
     "lint": "node_modules/.bin/eslint index.ts",
-    "lint_fix": "node_modules/.bin/eslint . --fix"
+    "lint_fix": "node_modules/.bin/eslint src --fix"
   },
   "author": "",
   "license": "ISC",
@@ -25,8 +25,8 @@
     "@types/node": "^16.7.1",
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.21.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "bcryptjs": "3.0.0",
+    "cors": "2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -38,9 +38,9 @@
     "typescript": "5.5.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12",
-    "sequelize-cli": "^6.6.2",
     "@stylistic/eslint-plugin-ts": "2.9.0",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "@typescript-eslint/parser": "8.8.1",
     "@typescript-eslint/type-utils": "8.8.1",
@@ -49,6 +49,8 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "28.8.3",
     "eslint-plugin-rulesdir": "0.2.2",
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.6.2",
     "ts-api-utils": "1.3.0"
   }
 }
